--- a/styles/styles.css
+++ b/styles/styles.css
@@ -4,6 +4,9 @@ body{
     margin: 0;
 }
 
+.body-section-top-padding{
+    padding-top: 116px;
+}
 .font-inter{
   font-family: 'Inter';
 }
@@ -29,7 +32,7 @@ body{
 
 /* header */
 .header{
-    background-image: url(/Assets/Hero-bg.png);
+    background-image: url(../assets/Hero-bg.png);
     height: 700px;
 }
 
@@ -59,5 +62,37 @@ body{
     font-size: 65px;
     font-weight: bold;
     color: #252432;
+}
+
+/* main */
+.main-bg-color{
+    background-color: #F5F8FF;
+}
+/* action-section */
+.action-section{
+    /* margin-top: 116px; */
+    display: flex;
+    justify-content: space-between;
+}
+
+.action-section-contents{
+    width: 517px;
+}
+.action-title{
+    font-size: 42px;
+    font-weight: bold;
+    color:#252432;
+    margin-bottom: -2px;
+}
+
+.action-description{
+    color: #25243250;
+    font-size: 24px;
+}
+
+.action-img{
+    width: 403px;
+    height: 328px;
+    border-radius: 48px;
 }
 
