--- a/styles/styles.css
+++ b/styles/styles.css
@@ -32,7 +32,7 @@ body{
 
 /* header */
 .header{
-    background-image: url(../assets/Hero-bg.png);
+    background-image: url(../assets/hero-bg.png);
     height: 700px;
 }
 
