--- a/styles.css
+++ b/styles.css
@@ -96,3 +96,107 @@ body{
     border-radius: 48px;
 }
 
+
+/* user survey section */
+
+.productive-user-section{
+    background-color: #4d47ff20;
+    height: 306px;
+    margin-top: 116px;
+    border-radius: 24px;
+    padding: 2px 142px;
+    
+}
+
+.user-section-contents{
+    text-align: center;
+}
+
+.user-section-title{
+    font-size: 38px;
+    font-weight: bold;
+    color:#252432;
+}
+
+.user-surveys{
+    display: flex;
+    gap: 158px;
+    justify-content: center;
+}
+
+.user-survey{
+    text-align: center;
+    margin-top: -80px;
+}
+
+.survey-title{
+    font-size: 80px;
+    font-weight: bold;
+    color:#4E47FF;
+    margin-bottom: -18px;
+}
+
+.survey-sub-title{
+    color: #00000050;
+    font-size: 20px;
+}
+
+
+/* user review section */
+.user-review-section{
+    padding-top: 100px;
+    padding-bottom: 140px;
+}
+
+.user-review-section-title{
+    text-align: center;
+    font-size: 42px;
+    font-weight: bold;
+    color:#252432;
+}
+
+.user-reviews-cards{
+    display: flex;
+    gap: 20px;
+    justify-content: space-between;
+}
+
+.user-review-card{
+    height: 210px;
+    padding: 24px 24px 0 24px;
+    background-color: #fffffff2;
+    border-radius: 14px;
+}
+
+.user-review-title{
+    margin-bottom: -9px;
+    margin-top: 15px;
+    color: #1E1E1E;
+}
+
+.user-review{
+    color: #1E1E1E;
+}
+
+.user-info{
+    display: flex;
+    height: 46px;
+    align-items: center;
+    gap: 6px;
+    padding-top: 15px;
+    margin-top: -10px;
+}
+
+.user-img{
+    border-radius: 9999px;
+    height: 40px;
+    width: 40px;
+}
+.user-name{
+    margin-bottom: -12px;
+    color: #757575;
+}
+
+.date{
+    color: #B3B3B3;
+}
