--- a/styles.css
+++ b/styles.css
@@ -200,3 +200,35 @@ body{
 .date{
     color: #B3B3B3;
 }
+
+/* focus section */
+
+.focus-contents{
+    text-align: center;
+    background-color:#FFFFFF;
+    padding: 71px 150px;
+    border-radius: 14px;
+}
+.focus-title{
+    font-size: 50px;
+    font-weight: bold;
+    color: #000000;
+    margin-bottom: 0px;
+}
+
+.focus-sub-title{
+    color: rgba(0, 0, 0, 0.5);
+
+}
+
+.focus-section-button{
+    display: block;
+    margin: 0 auto;
+    margin-bottom: 20px;
+}
+
+.focus-img{
+    width: 840px;
+    height: 364.77px;
+    border-radius: 48px;
+}
