--- a/styles.css
+++ b/styles.css
@@ -206,7 +206,7 @@ body{
 .focus-contents{
     text-align: center;
     background-color:#FFFFFF;
-    padding: 71px 150px;
+    padding: 55px 150px 71px;
     border-radius: 14px;
 }
 .focus-title{
@@ -231,4 +231,92 @@ body{
     width: 840px;
     height: 364.77px;
     border-radius: 48px;
+    margin: 0 auto;
+}
+
+/* contract section */
+.contract-section{
+    height: 535px;
+    margin-top: 160px;
+}
+
+.contract-input{
+    width: 50%;
+}
+
+form {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+}
+
+.contract-contents{
+    display: flex;
+    align-items: center;
+    justify-content:space-between;
+}
+
+.contract-title{
+    font-size: 97px;
+    font-weight: bold;
+    color: #000000;
+    width: 50%;
+}
+
+.contract-section form label{
+    color: #000000;
+    font-size: 18px;
+    font-weight: 500;
+
+}
+
+.contract-section form input, .contract-section form textarea{
+    border-radius: 10px;
+    border: none;
+    padding: 20px 0 20px 32px;
+    width: 100%;
+    box-sizing: border-box;
+    margin-top: 10px;
+}
+
+.input-type{
+    margin-bottom: 19px;
+}
+
+.contract-button{
+    padding-top: 21px;
+    padding-bottom: 37px;
+}
+
+/* footer section */
+footer{
+    height: 328px;
+    background-color: #FFFFFF;
+    padding: 100px 454.5px 0px 454.5px;
+}
+
+.footer-section{
+    text-align: center;
+}
+
+.footer-nav{
+    display: flex;
+    justify-content: space-evenly;
+}
+
+.footer-nav a{
+    text-decoration: none;
+    color: #8987A1;
+}
+
+.footer-logo{
+    font-size: 100px;
+    font-weight: 900;
+    color: #4E47FF;
+    margin: 0;
+}
+
+.footer-description{
+    color: #8987A1;
+    margin-bottom: 10px;
 }
