--- a/styles.css
+++ b/styles.css
@@ -316,6 +316,10 @@ footer{
     color: #8987A1;
 }
 
+.footer-nav a:hover{
+    color: #4E47FF;
+}
+
 .footer-logo{
     font-size: 100px;
     font-weight: 900;
